# advent-of-code

./: .clang-format  .gitignore  CMakeLists.txt  README.md  build.zig  build.zig.zon  fourmolu.yaml  package.yaml  stack.yaml
TH/: TH.hs
Y2023/: Day01.hs  Day02.hs  Day03.hs  Day04.hs  Day05.hs  Day06.hs  Day07.hs  Day08.hs  Day09.hs  Day10.hs  Day11.hs  Day12.hs  Day14.hs  Day15.hs  Day16.hs  Day18.hs  Lib.hs  Y2023.hs
app/: Main.hs
src/: 1.hpp  1.zig  10.zig  11.zig  12.zig  13.zig  14.zig  15.zig  16.zig  2.hpp  2.zig  3.hpp  3.zig  4.hpp  4.zig  5.hpp  5.zig  6.zig  7.zig  8.zig  9.zig  aoc.hpp  aoc.zig  grid.hpp  grid.zig  main.cpp  main.zig  regex.zig
